<resources>
    <string name="app_name">Color Harmony</string>
    <string name="gallery_button_description">Open gallery</string>
    <string name="camera_button_description">Take a picture</string>
    <string name="share">Share</string>
    <string name="share_description">Share the app with your friends</string>
    <string name="settings">Settings</string>
    <string name="settings_description">Changed the settings of the app</string>
    <string name="support">Support me</string>
    <string name="favorites">Saved palettes</string>
    <string name="favorites_description">View your saved color palettes </string>
    <string name="support_description">Buy the developer a coffee</string>
    <string name="rotate">Rotate image</string>
    <string name="rotate_description">Rotate the image by 180 degree</string>
    <string name="confirm_orientation">Confirm</string>
    <string name="confirm_orientation_description">Confirm orientation of the image</string>
    <string name="pick_color">Pick a color from the image</string>
    <string name="info_button">Learn what the effect of the tactic is and when to use it</string>
    <string name="confirm_color">Confirm the color harmony and see a preview</string>
    <string name="save_palette_enter_name">Enter name</string>
    <string name="save_palette_enter_description">Enter description</string>

    <!-- Color Tactic Spinner Item names !-->
    <string name="spinner_item_complementary">Complementary</string>
    <string name="spinner_item_monochromatic">Monochromatic</string>
    <string name="spinner_item_analogous">Analogous</string>
    <string name="spinner_item_split_complementary">Split Complementary</string>
    <string name="spinner_item_triadic">Triadic</string>
    <string name="spinner_item_tetradic">Tetradic</string>

    <!-- Save Favorite Colors Dialog Texts !-->
    <string name="save_fav_dialog_save">Save</string>
    <string name="save_fav_dialog_saved">Saved</string>
    <string name="save_fav_dialog_cancel">Cancel</string>
    <string name="save_fav_dialog_canceled">Canceled</string>

    <!-- Small text pieces !-->
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="please_select_image">Please select an image</string>
    <string name="app_not_installed">App not installed</string>
    <string name="permission_denied">Permission denied</string>
    <string name="select_app">Select app</string>
    <string name="created_with_color_harmony">Created with Color Harmony: </string>

    <!-- Different tactics explanation !-->
    <string name="complementary_info">Complementary colors are two colors opposite to each other on
        the color wheel. These create a high contrast, so it\'s a good idea to use it, to make
        something stand out. For example, use one color as the background and the other for accents.
        Used together these colors appear brighter and more prominent.</string>
    <string name="monochrome_info">Monochromatic colors are the same base color, with different tones
        and tints. They provide a subtle and minimalistic looking color combination.
        Monochromatic colors are easy to apply to design and project a harmonious look.</string>
    <string name="analogous_info">Analogous colors are three color side by side on the color wheel.
        This combination, though very versatile can look overwhelming, used wrong. To balance this
        out, it’s a good idea to choose one dominant color, and use the other two as accents</string>
    <string name="split_complementary_info">Split complementary colors use one color and match it
        up with two colors adjacent to its complementary color. This tactic is good for
        beginners because it’s difficult to mess it up. The base color should dominate,
        supported by the two other colors for highlights and accents.</string>
    <string name="triadic_info">Triadic colors are three, evenly spaced colors on the color wheel.
        They provide a high-contrast, but more balanced look than complementary colors.
        It’s a good idea, to choose one dominant color and let the other two function as supporting colors.</string>
    <string name="tetradic_info">Tetradic colors are four colors, evenly spaced colors on the color wheel.
        You can either use it as a double complementary set, or choose one dominating color and let
        the other three support it. This tactic is the hardest to pull off, because of the difficulty
        in balancing the colors out.</string>


    <!-- Shared preferences Text !-->
    <string name="show_color_text_value">Show color value</string>
    <string name="show_color_text_value_summary">Check, to see text value of the colors</string>
    <string name="choose_color_text_type">Pick color text type</string>
    <string name="choose_color_text_type_summary">Pick the format you want the color text displayed in</string>
    <string name="choose_color_text_type_title">Pick color format</string>
    <string name="select_app_language">Change the language</string>
    <string name="select_language_title">Select a language</string>
    <string name="select_language_summary">Choose the language for the app</string>
    <string name="switch_theme">Switch your theme</string>
    <string name="switch_theme_key">theme_switch</string>
    <string name="switch_dark_theme">Switch to dark theme</string>
    <string name="switch_light_theme">Switch to light theme</string>
    <string name="switch_description">Switch the theme the app</string>

    <!-- Ad Strings !-->
    <string name="admob_app_id">ca-app-pub-6804378884831161/4654309159</string>
    <string name="admob_banner_id">ca-app-pub-6804378884831161/6683730214</string>

    <!-- Support me !-->
    <string name="support_header_text">Hi, I\'m Florian. Thanks a lot for using my app, it really
    helps and encourages me. This page is for donations. If you want to buy me a meal or a cup of coffee, I would
    appreciate your kindness very much and it would help me out a lot. Anyway I appreciate every user of Color Harmony
    whether they donate or not.\n<b>Big thanks to you all! </b></string>

    <!-- Ad ids !-->
    <string name="banner_ad_id">ca-app-pub-6804378884831161/6683730214</string>
    <string name="interstitial_add_id">ca-app-pub-6804378884831161/4654309159</string>

    <!-- Donations !-->
    <string name="donation_paypal_item">PayPal item in strings</string>

    <!-- Intro Text !-->
    <string name="intro_text_p1_title">Welcome to Color Harmony</string>
    <string name="intro_text_p1_description">Create stunning color palettes and explore the compositions of your favorite images</string>
    <string name="intro_text_p2_title">1. Create or choose an image</string>
    <string name="intro_text_p2_description">First, in order to get a color from an image, we first need the image!
                You can either select one from your gallery, or take a new one with your camera.</string>
    <string name="intro_text_p3_title">2. Click on your image</string>
    <string name="intro_text_p3_description">Clicking on the image sets the base color from which the harmony will be
                calculated. Pro tip: By clicking on one of the above colors, you can save the color code to your clipboard.
                By clicking the top back button you get back to the main page</string>
    <string name="intro_text_p311_title">3. Change up the tactic</string>
    <string name="intro_text_p311_description">By clicking on the List, you can select another tactic, which will
                be applied immediately, to your chosen color. Here you can experiment, to find out, what tactic
                best suits your interests</string>
    <string name="intro_text_p31_title">4. Learn the theory</string>
    <string name="intro_text_p31_description">By clicking in the i-Icon, you get to learn, what the current tactic
                is used for, and how to use it</string>
    <string name="intro_text_p4_title">5. Save your favorite colors</string>
    <string name="intro_text_p4_description">Got a color scheme that fits you? Perfect! Now click on the save icon,
                enter a name, and a description to save your colors for later</string>
    <string name="intro_text_p5_title">6. Visit your favorites</string>
    <string name="intro_text_p5_description">By clicking on the star icon on the task bar, you can take a look at
                all your saved color palettes, click on one item of the list, to further inspect it and the
                ability to share it with your friends via WhatsApp or other social media.
                By swiping either left or right, you delete the item from your collection.</string>
    <string name="intro_text_p6_title">7. Change settings</string>
    <string name="intro_text_p6_description">By clicking on the gear wheel on the task bar, you can change the settings.
                Here you can choose if you want the color formats shown and in what format you want them. Additionally,
                for all your nigh owls out there, you can switch on the night theme.</string>
    <string name="intro_text_p7_title">Explore, create and have fun!</string>
    <string name="intro_text_p7_description">Congratulations, you\'ve finished this quick overview and are now ready to dive
                in deep into the world of colors!</string>
    <string name="intro_finish_text">Have fun!</string>

</resources>
