<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="checkbox"
        android:summary="@string/show_color_text_value_summary"
        android:title="@string/show_color_text_value"
        android:defaultValue="true"/>

    <ListPreference
        android:key="list"
        android:defaultValue="Hex"
        android:dialogTitle="@string/choose_color_text_type_title"
        android:entries="@array/color_formats"
        android:title="@string/choose_color_text_type_title"
        android:summary="@string/choose_color_text_type"
        android:entryValues="@array/color_values"/>

    <SwitchPreference
        android:title="@string/switch_theme"
        android:key="@string/switch_theme_key"
        android:summaryOn="@string/switch_light_theme"
        android:summaryOff="@string/switch_dark_theme"
        android:contentDescription="@string/switch_description"/>



</PreferenceScreen>