<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share_white_24dp"
        android:title="@string/share"
        android:contentDescription="@string/share_description"
        app:showAsAction="always">

    </item>

    <item
        android:id="@+id/support_me"
        android:icon="@drawable/ic_cake_white_24dp"
        android:title="@string/support"
        android:contentDescription="@string/support_description"
        app:showAsAction="always">

    </item>

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/support"
        android:contentDescription="@string/settings_description"
        app:showAsAction="always">

    </item>
</menu>