<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/activity_main_constraint_layout">

    <ImageButton
        android:id="@+id/cameraImageButton"
        android:layout_width="127dp"
        android:layout_height="66dp"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="200dp"
        android:background="@drawable/round_button_night"
        android:contentDescription="@string/camera_button_description"
        android:src="@drawable/ic_photo_camera_white_24dp"
        app:layout_constraintBottom_toTopOf="@+id/adView"
        app:layout_constraintEnd_toEndOf="@+id/galleryImageButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/galleryImageButton"
        app:layout_constraintTop_toBottomOf="@+id/galleryImageButton" />

    <ImageButton
        android:id="@+id/galleryImageButton"
        android:layout_width="127dp"
        android:layout_height="66dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/round_button_night"
        android:contentDescription="@string/gallery_button_description"
        android:src="@drawable/ic_image_white_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/gallery_button_description"
        app:layout_constraintEnd_toEndOf="@+id/galleryImageButton"
        app:layout_constraintStart_toStartOf="@+id/galleryImageButton"
        app:layout_constraintTop_toBottomOf="@+id/galleryImageButton" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/camera_button_description"
        app:layout_constraintEnd_toEndOf="@+id/cameraImageButton"
        app:layout_constraintStart_toStartOf="@+id/cameraImageButton"
        app:layout_constraintTop_toBottomOf="@+id/cameraImageButton" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:adSize="SMART_BANNER"
        app:adUnitId="@string/admob_banner_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>